syntax = "proto3";
package xsuportal.proto.services.common;
option go_package = "github.com/isucon/isucon10-final/proto/services/common";

import "xsuportal/resources/contest.proto";

message GetContestResponse { xsuportal.proto.resources.Contest contest = 1; }
