syntax = "proto3";
package xsuportal.proto.services.common;
option go_package = "github.com/isucon/isucon10-final/benchmarker/proto/xsuportal/services/common";

import "xsuportal/resources/team.proto";
import "xsuportal/resources/contestant.proto";
import "xsuportal/resources/contest.proto";

message GetCurrentSessionResponse {
  xsuportal.proto.resources.Team team = 1;
  xsuportal.proto.resources.Contestant contestant = 2;
  xsuportal.proto.resources.Contest contest = 4;
  string push_vapid_key = 6;
}
