syntax = "proto3";
package xsuportal.proto.services.contestant;
option go_package = "github.com/isucon/isucon10-final/webapp/golang/proto/xsuportal/services/contestant";

message LoginRequest {
  string contestant_id = 1;
  string password = 2;
}

message LoginResponse {}
